# jed

./: Cargo.toml  README.md
crates/welcome/: Cargo.toml
crates/welcome/src/: welcome.rs
crates/welcomf/: Cargo.toml
crates/welcomf/src/: welcome.rs
crates/welcomg/: Cargo.toml
crates/welcomg/src/: welcome.rs
crates/workspace/src/: workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
