[package]
name = "welcomg"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/welcome.rs"

[dependencies]
anyhow.workspace = true
db.workspace = true
gpui.workspace = true
serde.workspace = true
settings.workspace = true
ui.workspace = true
workspace.workspace = true
